# CavaLayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cava-input.hpp  shaders.hpp
src/: cava-input.cpp  layer-shell-client-protocol.c  main.cpp
